--- a/Ruth_juni_2022.ipynb
+++ b/Ruth_juni_2022.ipynb
@@ -86,8 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "d02ea468-243b-4b80-840c-9b90e95521ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df = corpus.corpus[~corpus.corpus.urn.str.contains('faedrelandet_')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8c5b5df5-5601-4694-907a-20820b30fd23",
    "metadata": {},
    "outputs": [
     {
@@ -131,294 +141,49 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>203307348</td>\n",
-       "      <td>decorahposten</td>\n",
-       "      <td>None</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_decorahposten_null_null_...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19401129</td>\n",
-       "      <td>1940</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>digavis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>202125657</td>\n",
-       "      <td>decorahposten</td>\n",
-       "      <td>None</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_decorahposten_null_null_...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19700326</td>\n",
-       "      <td>1970</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>digavis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>202125057</td>\n",
-       "      <td>decorahposten</td>\n",
-       "      <td>None</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_decorahposten_null_null_...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19150611</td>\n",
-       "      <td>1915</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>digavis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>203307089</td>\n",
-       "      <td>decorahposten</td>\n",
-       "      <td>None</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_decorahposten_null_null_...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19380201</td>\n",
-       "      <td>1938</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>digavis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>203306788</td>\n",
-       "      <td>decorahposten</td>\n",
-       "      <td>None</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_decorahposten_null_null_...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19300307</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>digavis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21872</th>\n",
-       "      <td>202880847</td>\n",
-       "      <td>washingtonposten</td>\n",
-       "      <td>None</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_washingtonposten_null_nu...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19291018</td>\n",
-       "      <td>1929</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>digavis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21873</th>\n",
-       "      <td>202880872</td>\n",
-       "      <td>washingtonposten</td>\n",
-       "      <td>None</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_washingtonposten_null_nu...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19300411</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>digavis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21874</th>\n",
-       "      <td>202880779</td>\n",
-       "      <td>washingtonposten</td>\n",
-       "      <td>None</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_washingtonposten_null_nu...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19280629</td>\n",
-       "      <td>1928</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>digavis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21875</th>\n",
-       "      <td>202880875</td>\n",
-       "      <td>washingtonposten</td>\n",
-       "      <td>None</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_washingtonposten_null_nu...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19300502</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>digavis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21876</th>\n",
-       "      <td>202880929</td>\n",
-       "      <td>washingtonposten</td>\n",
-       "      <td>None</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_washingtonposten_null_nu...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19310515</td>\n",
-       "      <td>1931</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>digavis</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>21877 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         dhlabid             title authors  \\\n",
-       "0      203307348     decorahposten    None   \n",
-       "1      202125657     decorahposten    None   \n",
-       "2      202125057     decorahposten    None   \n",
-       "3      203307089     decorahposten    None   \n",
-       "4      203306788     decorahposten    None   \n",
-       "...          ...               ...     ...   \n",
-       "21872  202880847  washingtonposten    None   \n",
-       "21873  202880872  washingtonposten    None   \n",
-       "21874  202880779  washingtonposten    None   \n",
-       "21875  202880875  washingtonposten    None   \n",
-       "21876  202880929  washingtonposten    None   \n",
-       "\n",
-       "                                                     urn oaiid sesamid isbn10  \\\n",
-       "0      URN:NBN:no-nb_digavis_decorahposten_null_null_...  None    None   None   \n",
-       "1      URN:NBN:no-nb_digavis_decorahposten_null_null_...  None    None   None   \n",
-       "2      URN:NBN:no-nb_digavis_decorahposten_null_null_...  None    None   None   \n",
-       "3      URN:NBN:no-nb_digavis_decorahposten_null_null_...  None    None   None   \n",
-       "4      URN:NBN:no-nb_digavis_decorahposten_null_null_...  None    None   None   \n",
-       "...                                                  ...   ...     ...    ...   \n",
-       "21872  URN:NBN:no-nb_digavis_washingtonposten_null_nu...  None    None   None   \n",
-       "21873  URN:NBN:no-nb_digavis_washingtonposten_null_nu...  None    None   None   \n",
-       "21874  URN:NBN:no-nb_digavis_washingtonposten_null_nu...  None    None   None   \n",
-       "21875  URN:NBN:no-nb_digavis_washingtonposten_null_nu...  None    None   None   \n",
-       "21876  URN:NBN:no-nb_digavis_washingtonposten_null_nu...  None    None   None   \n",
-       "\n",
-       "       city  timestamp  year publisher langs subjects   ddc genres  \\\n",
-       "0      None   19401129  1940      None  None     None  None   None   \n",
-       "1      None   19700326  1970      None  None     None  None   None   \n",
-       "2      None   19150611  1915      None  None     None  None   None   \n",
-       "3      None   19380201  1938      None  None     None  None   None   \n",
-       "4      None   19300307  1930      None  None     None  None   None   \n",
-       "...     ...        ...   ...       ...   ...      ...   ...    ...   \n",
-       "21872  None   19291018  1929      None  None     None  None   None   \n",
-       "21873  None   19300411  1930      None  None     None  None   None   \n",
-       "21874  None   19280629  1928      None  None     None  None   None   \n",
-       "21875  None   19300502  1930      None  None     None  None   None   \n",
-       "21876  None   19310515  1931      None  None     None  None   None   \n",
-       "\n",
-       "      literaryform  doctype  \n",
-       "0             None  digavis  \n",
-       "1             None  digavis  \n",
-       "2             None  digavis  \n",
-       "3             None  digavis  \n",
-       "4             None  digavis  \n",
-       "...            ...      ...  \n",
-       "21872         None  digavis  \n",
-       "21873         None  digavis  \n",
-       "21874         None  digavis  \n",
-       "21875         None  digavis  \n",
-       "21876         None  digavis  \n",
-       "\n",
-       "[21877 rows x 17 columns]"
+       "Empty DataFrame\n",
+       "Columns: [dhlabid, title, authors, urn, oaiid, sesamid, isbn10, city, timestamp, year, publisher, langs, subjects, ddc, genres, literaryform, doctype]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corpus.corpus"
+    "new_df[new_df.urn.str.contains(\"faedrelandet_\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "536b9f0a-b902-475a-a8af-e7b1a675142a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/disk1/Github/Amerika_aviser\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b9315b20-a820-4065-a083-c5a880c07820",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df.to_csv('norske_aviser.csv', header=True)"
    ]
   },
   {
